[gd_scene load_steps=18 format=2]

[ext_resource path="res://assets/Gregory/3.png" type="Texture" id=1]
[ext_resource path="res://assets/Gregory/4.png" type="Texture" id=2]
[ext_resource path="res://assets/Gregory/5.png" type="Texture" id=3]
[ext_resource path="res://assets/Gregory/6.png" type="Texture" id=4]
[ext_resource path="res://assets/Gregory/7.png" type="Texture" id=5]
[ext_resource path="res://assets/Gregory/9.png" type="Texture" id=6]
[ext_resource path="res://assets/Gregory/8.png" type="Texture" id=7]
[ext_resource path="res://assets/Gregory/2.png" type="Texture" id=8]
[ext_resource path="res://assets/Gregory/1.png" type="Texture" id=9]
[ext_resource path="res://layout_elements/Gregory.gd" type="Script" id=10]
[ext_resource path="res://layout_elements/Boomerang.tscn" type="PackedScene" id=11]
[ext_resource path="res://layout_elements/HealthBar.tscn" type="PackedScene" id=12]
[ext_resource path="res://assets/Gregory/dead.png" type="Texture" id=13]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 13 ) ],
"loop": false,
"name": "die",
"speed": 1.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 8 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 7 ), ExtResource( 6 ) ],
"loop": true,
"name": "stand",
"speed": 18.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 24.2345, 88.6498 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 29.6378, 8.94987 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 32.4193, 98.1056 )

[node name="Gregory" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 73
script = ExtResource( 10 )

[node name="HealthBar" parent="." instance=ExtResource( 12 )]
margin_left = 3.0
margin_top = -111.36
margin_right = 3.0
margin_bottom = -111.36

[node name="Animation" type="AnimatedSprite" parent="."]
position = Vector2( -9.53674e-07, 3.8147e-06 )
scale = Vector2( 2.50565, 2.50565 )
frames = SubResource( 1 )
animation = "stand"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 3, 0 )
shape = SubResource( 2 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
position = Vector2( 3.18478, 12.0304 )
scale = Vector2( 1.2748, 8.94484 )

[node name="Boomerang" parent="." instance=ExtResource( 11 )]
position = Vector2( 3, 0 )

[node name="StompDetector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StompDetector"]
modulate = Color( 0.592157, 0.0235294, 0.909804, 1 )
position = Vector2( 3, -87.92 )
shape = SubResource( 3 )
one_way_collision = true

[node name="Timer" type="Timer" parent="."]
wait_time = 3.322
one_shot = true

[node name="BodyDamageDetector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BodyDamageDetector"]
modulate = Color( 0.145098, 0.12549, 0.262745, 1 )
position = Vector2( 2, 3 )
shape = SubResource( 4 )

[node name="JumpTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
[connection signal="health" from="." to="HealthBar" method="_on_Player_health"]
[connection signal="screen_entered" from="VisibilityEnabler2D" to="." method="_on_VisibilityEnabler2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityEnabler2D" to="." method="_on_VisibilityEnabler2D_screen_exited"]
[connection signal="body_entered" from="StompDetector" to="." method="_on_StompDetector_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="BodyDamageDetector" to="." method="_on_BodyDamageDetector_body_entered"]
[connection signal="timeout" from="JumpTimer" to="." method="_on_JumpTimer_timeout"]
